--- a/app/templates/admin/base_site.html
+++ b/app/templates/admin/base_site.html
@@ -1,7 +1,14 @@
 <!-- /home/amigro/app/templates/admin/base_site.html -->
+{% extends "admin/base.html" %}
+
 {% block branding %}
     <div id="site-name">
         <img src="https://amigro.org/wp-content/uploads/2019/11/logo2-1.png" alt="Amigro" style="max-height: 50px;">
         <h1>{{ site_title|default:_('Django site admin') }}</h1>
     </div>
+{% endblock %}
+
+{% block content %}
+    <!-- Aquí va el contenido del administrador -->
+    <h2>Contenido personalizado</h2>
 {% endblock %}
