Ajustado a /home/pablollh & ai.huntred / ai_huntred. Mejora a Parser, linkedin y scraping, con ajustes en ML y tasks...

--- a/app/templates/emails/template_amigro.html
+++ b/app/templates/emails/template_amigro.html
@@ -26,7 +26,7 @@
                             <td style="line-height: 32px; padding-left: 30px;" valign="baseline">
                               <span style="font-size: 32px;">
                                 <a style="text-decoration: none;" href="{{ blog_url }}" target="_blank" rel="noopener">
-                                  <img src="https://amigro.org/wp-content/uploads/2023/03/200x44.png" alt="{{ business_unit.name }} Logo" />
+                                  <img src="https://huntred.com/wp-content/uploads/2023/03/200x44.png" alt="{{ business_unit.name }} Logo" />
                                 </a>
                               </span>
                             </td>
@@ -58,9 +58,9 @@
                                   <h4>Candidatos</h4>
                                   <div class="menu-footer-for-candidates-container">
                                     <ul id="menu-footer-for-candidates" class="menu">
-                                      <li id="menu-item-229"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/browse-jobs/">Oportunidades</a></li>
-                                      <li id="menu-item-230"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/browse-categories/">Categorías</a></li>
-                                      <li id="menu-item-231"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/candidate-dashboard/">Panel Candidato</a></li>
+                                      <li id="menu-item-229"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/browse-jobs/">Oportunidades</a></li>
+                                      <li id="menu-item-230"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/browse-categories/">Categorías</a></li>
+                                      <li id="menu-item-231"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/candidate-dashboard/">Panel Candidato</a></li>
                                     </ul>
                                   </div>
                                 </aside>
@@ -72,8 +72,8 @@
                                   <h4>Empleadores</h4>
                                   <div class="menu-footer-for-employers-container">
                                     <ul id="menu-footer-for-employers" class="menu">
-                                      <li id="menu-item-218"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/job-dashboard/">Panel Empleador</a></li>
-                                      <li id="menu-item-217"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/post-a-job/">Crea una Oportunidad</a></li>
+                                      <li id="menu-item-218"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/job-dashboard/">Panel Empleador</a></li>
+                                      <li id="menu-item-217"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/post-a-job/">Crea una Oportunidad</a></li>
                                       <li id="menu-item-219"><a style="text-decoration: none; color: #909090;" href="#">Paquetes</a></li>
                                     </ul>
                                   </div>
@@ -86,9 +86,9 @@
                                   <h4>Legal</h4>
                                   <div class="menu-legal-container">
                                     <ul id="menu-legal" class="menu">
-                                      <li id="menu-item-201"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/tos">Política de Privacidad</a></li>
-                                      <li id="menu-item-202"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/tos">TOS</a></li>
-                                      <li id="menu-item-209"><a style="text-decoration: none; color: #909090;" href="https://amigro.org/faq">FAQ</a></li>
+                                      <li id="menu-item-201"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/tos">Política de Privacidad</a></li>
+                                      <li id="menu-item-202"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/tos">TOS</a></li>
+                                      <li id="menu-item-209"><a style="text-decoration: none; color: #909090;" href="https://huntred.com/faq">FAQ</a></li>
                                     </ul>
                                   </div>
                                 </aside>
@@ -103,7 +103,7 @@
                             </td>
                             <td colspan="3" align="center" height="15">
                               <a href="{{ blog_url }}" target="_blank" rel="noopener">
-                                <img src="https://amigro.org/wp-content/uploads/2019/11/logo2-1.png" alt="{{ business_unit.name }} Logo" width="120px" />
+                                <img src="https://huntred.com/wp-content/uploads/2019/11/logo2-1.png" alt="{{ business_unit.name }} Logo" width="120px" />
                               </a>
                             </td>
                           </tr>
